Change side bar to be a top bar that becomes fixed when it is about to go out of view when user scrolls.

--- a/portfolio/src/main/webapp/style.css
+++ b/portfolio/src/main/webapp/style.css
@@ -1,31 +1,39 @@
 #content {
-  margin-left: 35em;
+  margin-top: 5em;
+  margin-left: auto;
   margin-right: auto;
   width: 50rem;
 }
 
-#ramdom-container {
+#ramdom-fact-container {
   margin-top: 1.25rem;
 }
 
-.sidebar {
-    margin: 0;
-    padding: 0;
-    width: 30rem;
-    background-color: gray;
-    position: fixed;
-    height: 100%;
-    overflow: auto;
+#navbar {
+    overflow: hidden;
+    background-color: black;
 }
 
-.sidebar a {
+#navbar a {
+    float: left;
     display: block;
-    color: black;
-    padding: 1rem;
+    color: gray;
+    text-align: center;
+    padding: 14px;
     text-decoration: none;
 }
 
-.sidebar a.active {
+#navbar a.active {
     background-color: coral;
     color: white;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
+    width: 100%;
+}
+
+.sticky + .content {
+    padding-top: 5rem;
 }
